# wordle_solver

./: LICENSE  pyproject.toml
solver/: solve.py
